# openapi3

./: .gitignore  .pep8  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codecov.yml  main.yml
aiopenapi3/: __init__.py  __main__.py  base.py  components.py  errors.py  example.py  general.py  info.py  json.py  loader.py  media.py  model.py  object_base.py  openapi.py  parameter.py  paths.py  plugin.py  request.py  schemas.py  security.py  servers.py  tag.py  xml.py
aiopenapi3/expression/: Makefile  _grammar.py  _model.py  grammar.py  model.py
aiopenapi3/v20/: __init__.py  general.py  glue.py  info.py  parameter.py  paths.py  root.py  schemas.py  security.py  tag.py  xml.py
aiopenapi3/v30/: __init__.py  components.py  example.py  general.py  glue.py  info.py  media.py  parameter.py  paths.py  root.py  schemas.py  security.py  servers.py
aiopenapi3/v31/: __init__.py  components.py  example.py  general.py  info.py  media.py  parameter.py  paths.py  root.py  schemas.py  security.py  servers.py  tag.py  xml.py
openapi/: __init__.py  __main__.py  components.py  errors.py  general.py  info.py  object_base.py  openapi.py  paths.py  schemas.py  servers.py
openapi3/: __init__.py  __main__.py  components.py  errors.py  example.py  general.py  info.py  loader.py  object_base.py  openapi.py  parameter.py  paths.py  request.py  schemas.py  security.py  servers.py  tag.py  xml.py
openapi3/expression/: grammar.ebnf  grammar.py  model.py
tests/: additional_properties_test.py  conftest.py  fastapi_test.py  linode_test.py  loader_test.py  model_test.py  parse_data_test.py  parsing_test.py  path_test.py  plugin_test.py  ref_test.py  schema_test.py  swagger_test.py  test_runtimexpression.py
tests/api/: main.py  schema.py
tests/api/v1/: main.py  schema.py
tests/api/v2/: main.py  schema.py
tests/data/: README.md  array_without_items.yaml  swagger-v3.v3.json
tests/fixtures/: README.md  additional-properties.yaml  bad-parameter-name.yaml  broken-ref.yaml  broken.yaml  deeply-nested-allOf.yaml  dupe-operation-ids.yaml  empty_contact.yaml  example_array.yaml  float-validation.yaml  merge-extension.yaml  nested-allOf.yaml  obj-example.yaml  openapi-3.1.0-refs.yaml  parameter-types.json  parameter-with-underscores.yaml  petstore-expanded.yaml  ref-allof.yaml  ref-request-bodies.yaml  reference-reference-reference.yaml  rfc_6901.yaml  schema-without-properties.yaml  swagger-example.yaml  with-broken-links.yaml  with-external-docs.yaml  with-links.yaml  with-parameters.yaml  with-securityparameters.yaml  with_all_default_types.yaml
