[metadata]
name = openapi3
version = 1.0.0
description = Client and Validator of OpenAPI 3 Specifications
long_description = file: README.rst
author = dorthu
url = https://github.com/dorthu/openapi3
license = BSD 3-Clause License

[options]
packages =
    openapi3
install_requires =
    PyYaml
    requests
