[metadata]
name = aiopenapi3
version = 0.1.0

description = OpenAPI3 3.0.3 client / validator based on pydantic & httpx
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = openapi openapi3 swagger
license =
classifiers =
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",



[options]
packages = aiopenapi3
install_requires =
    PyYaml
    pydantic
    yarl
    httpx

[options.extras_require]
tests =
    pytest
    pytest-asyncio
    pytest-httpx
    fastapi-versioning
    hypercorn
    uvloop
expression =
    tatsu

