[metadata]
name = aiopenapi3
version = attr: aiopenapi3.__version__

description = OpenAPI3 3.0.3 client / validator based on pydantic & httpx
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openapi openapi3
license =
classifiers =
    Development Status :: 3 - Alpha 
    Environment :: Web Environment 
    Framework :: AsyncIO 
    Intended Audience :: Developers 
    Intended Audience :: Information Technology 
    Intended Audience :: System Administrators 
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent 
    Topic :: Internet 
    Topic :: Internet :: WWW/HTTP 
    Topic :: Software Development 
    Topic :: Software Development :: Libraries 
    Topic :: Software Development :: Libraries :: Application Frameworks 
    Topic :: Software Development :: Libraries :: Python Modules 
    Typing :: Typed
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 3 :: Only 
    Programming Language :: Python :: 3.9 
    Programming Language :: Python :: 3.10 


[options]
packages =
    aiopenapi3
    aiopenapi3.expression

install_requires =
    PyYaml
    pydantic
    yarl
    httpx

[options.extras_require]
tests =
    pytest
    pytest-asyncio
    pytest-httpx
    pytest-coverage
    fastapi-versioning
    hypercorn
    uvloop
    tatsu
expression =
    tatsu

